# ai-risk-kb

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
.github/workflows/: deploy.yml  monthly-full.yml  weekly-full.yml  weekly-gap-check.yml
automation/: automation_config.md  automation_engine.py  pyproject.toml
automation/tests/: conftest.py  test_entry_discovery.py  test_fixtures_smoke.py  test_gap_detection.py  test_monitoring_sources.py  test_orchestrator_init.py
automation/tests/fixtures/: sample_entry.mdx
docs/: about.md  changelog.md  contributing.md  how-to-use.md  monitoring-sources.md  schema.md
docs/domain-a-technical/: a1-hallucination.mdx  a2-model-drift.mdx  a3-robustness.mdx  a4-explainability.mdx
docs/domain-b-governance/: b1-accountability.mdx  b2-regulatory-compliance.mdx  b3-lifecycle-governance.mdx  b4-supply-chain.mdx
docs/domain-c-security/: c1-data-poisoning.mdx  c2-prompt-injection.mdx  c3-model-theft.mdx  c4-deepfakes.mdx  c5-ai-cyber-attacks.mdx
docs/domain-d-data/: d1-training-data-quality.mdx  d2-privacy.mdx  d3-intellectual-property.mdx
docs/domain-e-fairness/: e1-algorithmic-bias.mdx  e2-harmful-content.mdx  e3-misinformation.mdx
docs/domain-f-deployment/: f1-automation-bias.mdx  f2-shadow-ai.mdx  f3-scope-creep.mdx
docs/domain-g-systemic/: g1-concentration-risk.mdx  g2-environmental-impact.mdx  g3-workforce-displacement.mdx  g4-ai-safety.mdx
schema/: entry_template.md
src/css/: custom.css
src/pages/: index.js
